:white_check_mark: 섹션 1 완료

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     name: user-service
 
 eureka:
+  instance:
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
   client:
     registerWithEureka: true
     fetchRegistry: true
