:art: Add jwt token - login process

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -26,3 +26,11 @@ eureka:
 
 greeting:
   message: Welcome to the ecommerce
+
+logging:
+  level:
+    com.example.userservice: DEBUG
+
+token:
+  expiration_time: 86400000
+  secret: user_token
